Solucionado problema con tablas. Añadido modulo para gestionar la BD. Lo demas funciona perfectamente

--- a/JuegoMatematicas/JuegoMatematicas/JuegoMatematicas.vbproj
+++ b/JuegoMatematicas/JuegoMatematicas/JuegoMatematicas.vbproj
@@ -97,6 +97,7 @@
     <Compile Include="Configuracion.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GestionBBDD.vb" />
     <Compile Include="Juego.Designer.vb">
       <DependentUpon>Juego.vb</DependentUpon>
     </Compile>
